added image files and page style additions

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 id="section-subheading">My interests are web design, computer security and software development, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. But I also secretly hate technology, and the direction its going.
-                    I hope to contribute to a world where we value expeirences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
+                    <h3 id="section-subheading">My interests are web development and digital security, particularly in the areas of secure protocols, cryptography, privacy, and anonymity. On the other hand, I'm secretly wary of technology and the direction it's been heading in recent years. In general, I hope to contribute to a world where we value experiences and relationships over careers and money, where we know better than to trust authority blindly, and where we're passionate about building and creating things in a self-motivated and self-directed way.</h3>
                 </div>
             </div>
             <div class="row">
@@ -148,7 +147,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -162,21 +161,21 @@
                         <p class="text-muted">Check for traffic fatalities</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="img/triviagame.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>SOA Trivia Game</h4>
+                        <p class="text-muted">Trivia!</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -186,40 +185,55 @@
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
+                        <h4>Giphy API</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                <div class="col-md-4 col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Golden</h4>
+                        <h4>Giphy API</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
 
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                     <div class="col-md-4 col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Escape</h4>
+                        <h4>Giphy API</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
+
+                     <div class="col-md-4 col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Giphy API</h4>
+                        <p class="text-muted">Website Design</p>
+                    </div>
+                </div>
+                
     </section>
 
     <!-- Contact Section -->
@@ -275,7 +289,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="https://www.github.com/enigma_vision"><i class="fa fa-github"></i></a>
+                        <li><a href="https://www.github.com/enigmavision"><i class="fa fa-github"></i></a>
                         </li>
                         <li><a href="https://www.linkedin.com/in/dpaulsingh"><i class="fa fa-linkedin"></i></a>
                         </li>
@@ -315,13 +329,15 @@
                                 <h2>Austin Aware</h2>
                                 <p class="item-intro text-muted">Check for traffic fatalities and lost pets</p>
                                 <img class="img-responsive img-centered" src="img/austinaware.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>
-                                    <strong>Want these icons in this portfolio item sample?</strong>You can view the app here <a href="https://lit-refuge-33051.herokuapp.com">Austin Aware</a></p>
+                                <p>This app was created to view the traffic fatalities in the city of Austin. Other features include finding logged lost anddangerous pets.</p>
+
                                 <ul class="list-inline">
                                     <li>Date: November 2016</li>
                                     <li>Situation: Group Project</li>
                                     <li>Category: Traffic Map</li>
+
+                                <p> <a href="https://lit-refuge-33051.herokuapp.com"><strong>View Demo</a></strong></p> 
+    
                                 </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
@@ -346,11 +362,11 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Project Heading</h2>
+                                <h2>SOA Trivia Game</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                                <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                                <p>You can preview Startup Framework <a href="http://designmodo.com/startup/?u=787">here</a>.</p>
+                                <img class="img-responsive img-centered" src="img/soa.jpg" alt="">
+                                <p><a href="http://designmodo.com/startup/?u=787">SOA Trivia!</a> This app exists as a reference to demonstrate the usage of delayed functions. You'll have 45 seconds to complete the questions, upon timeout or upon submit button event, you'll be notified of the correct and incorrect guesses. The game then resets itself.</p>
+                                <p>Play the Game <a href="https://soatrivia.herokuapp.com">Here!</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -377,9 +393,9 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Giphy API</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                                <p>Styling is minimalistic, JavaScript is one file. Functionality is based on jQuery's .ajax({}) method requesting data from gihpy.com for any items matching a user-inputed query string value. This repository serves as a working example of a basic introduction to AJAX usage and syntax.</p>
-                                <p>You can check out my project here <a href="https://naturegiphy.herokuapp.com/">Giphy API</a>.</p>
+                                <img class="img-responsive img-centered" src="img/giphy.jpg" alt="">
+                                <p>Styling is minimalistic, JavaScript is one file. Functionality is based on jQuery's .ajax({}) method requesting data from gihpy.com for any items matching a user-inputed query string value. This app serves as a working example of a basic introduction to AJAX usage and syntax.</p>
+                                <p>You can check out my project demo here <a href="https://naturegiphy.herokuapp.com/">Giphy API</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
