--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="intro-text">
                 <div id="intro-heading1">Deepaul</div>
                 <div id="intro-heading2">Singh </div>
-                <div id="intro-heading3">Web Developer</div>
+                <div id="intro-heading3">Web Design and Development</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -154,11 +154,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/austinaware.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Austin Aware</h4>
-                        <p class="text-muted">Check for traffic fatalities</p>
+                        <p class="text-muted">Check for traffic fatalities, lost & dangerous pets</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 portfolio-item">
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -199,28 +199,28 @@
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Giphy API</h4>
+                        <h4>Restaurant App</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
 
                      <div class="col-md-4 col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/employee2.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Giphy API</h4>
+                        <h4>Employee Form</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
 
                      <div class="col-md-4 col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -229,8 +229,8 @@
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Giphy API</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Portfolio Modal</h4>
+                        <p class="text-muted">Portfolio Idea Sketch</p>
                     </div>
                 </div>
                 
@@ -328,7 +328,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Austin Aware</h2>
                                 <p class="item-intro text-muted">Check for traffic fatalities and lost pets</p>
-                                <img class="img-responsive img-centered" src="img/austinaware.jpg" alt="">
+                                <img class="img-responsive img-centered" src="img/a.jpg" alt="">
                                 <p>This app was created to view the traffic fatalities in the city of Austin. Other features include finding logged lost anddangerous pets.</p>
 
                                 <ul class="list-inline">
@@ -423,8 +423,28 @@
                                 <h2>Restaurant App</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-                                <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
-                                <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                                <p><br><b>Overview</b> </br> This application is formatted to take a Database identical to the original instructions. It takes a database named Bamazon, a table named Products, and the columns of ItemID, ProductName, DepartmentName, Price, and StockQuantity. +This application is the Basic + the Manager application. Formatted exactly like the original file names of BamazonCustomer.js and BamazonManager.js <br> <b>Functionality</b> </br>
+
+                                The customer app works exactly as described in the original instructions. On load, it'll load the table and display all items for sale and the coresponding data for each item. If the table looks odd, try expanding the terminal window a little bit. You'll be prompted for item number and desired quantity. 
+                                <br>
+
+                                <br> The Manager app is a little different. Like the customer app, it lists all items on load. So there's no command offered to list all items for sale. Likewise, inventory numbers are listed, so there is no "view low inventory" function. Had the database been 20+ items I would have added it. 
+                                </br> 
+                                <br> 
+                                The options within the Manager app are Restock Inventory, Add New Inventory, and Remove an Existing Product. (The remove product is a bonus feature I added.) 
+                                </br>
+
+
+
+
+                                </p>
+
+
+
+
+
+                                </p>
+                                <p>You can view the Demo <a href="https://powerful-hollows-61723.herokuapp.com/">Here</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -452,6 +472,35 @@
                                 <h2>Employee Form</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/employee.jpg" alt="">
+                                <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
+                                <p>You can view the full app here <a href="https://employeeeapp.herokuapp.com/">Employee Form</a>.</p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+        <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>Portfolio Sketch</h2>
+                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <img class="img-responsive img-centered" src="img/port.pdf" alt="">
                                 <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
                                 <p>You can view the full app here <a href="https://employeeeapp.herokuapp.com/">Employee Form</a>.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
