--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li> 
-                        <a href="http://www.google.com" target="_blank">Resume</a>
+                        <a href="https://drive.google.com/open?id=0B26A8k1EoZqbQ3JFWGpja1BiS2s" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -104,7 +104,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Services Offered</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -122,7 +122,7 @@
                         <i class="fa fa-paint-brush fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Wordpress</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">On this site you can download and install a software script called WordPress. To do this you need a web host who meets the minimum requirements and a little time. WordPress is completely customizable and can be used for almost anything. There is also a service called WordPress.com which lets you get started with a new and free WordPress-based blog in seconds, but varies in several ways and is less flexible than the WordPress you download and install yourself.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -130,7 +130,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Web servers and the sites they host are the most vulnerable security risk for many companies.  Today’s complex programs all have some “weaknesses.”  Each web server has dozens, or in some cases hundreds of settings, the website code always has issues and the applications running on the IT infrastructure can also have issues.</p>
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Check out my work</h3>
                 </div>
             </div>
             <div class="row">
@@ -168,7 +168,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/triviagame.png" class="img-responsive" alt="">
+                        <img src="img/triviaGame.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>SOA Trivia Game</h4>
@@ -199,7 +199,7 @@
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Restaurant App</h4>
+                        <h4>Mongo News</h4>
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/psketch.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Portfolio Modal</h4>
@@ -420,7 +420,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Restaurant App</h2>
+                                <h2>Mongo News</h2>
                                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
                                 <p><br><b>Overview</b> </br> This application is formatted to take a Database identical to the original instructions. It takes a database named Bamazon, a table named Products, and the columns of ItemID, ProductName, DepartmentName, Price, and StockQuantity. +This application is the Basic + the Manager application. Formatted exactly like the original file names of BamazonCustomer.js and BamazonManager.js <br> <b>Functionality</b> </br>
@@ -438,10 +438,6 @@
 
 
                                 </p>
-
-
-
-
 
                                 </p>
                                 <p>You can view the Demo <a href="https://powerful-hollows-61723.herokuapp.com/">Here</a>.</p>
@@ -484,7 +480,7 @@
     </div>
 
         <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="close-modal" data-dismiss="modal">
@@ -498,11 +494,8 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Portfolio Sketch</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/port.pdf" alt="">
-                                <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
-                                <p>You can view the full app here <a href="https://employeeeapp.herokuapp.com/">Employee Form</a>.</p>
+                               <a href="https://drive.google.com/open?id=0B26A8k1EoZqbeEk1S2EzcGN1azJyNGFJVEFHYkRrLVhIRmVF">View Portfolio Sketch</a>
+                               </div><br>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
