--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Theme CSS -->
     <link href="css/agency.css" rel="stylesheet">
@@ -158,7 +159,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Austin Aware</h4>
-                        <p class="text-muted">Check for traffic fatalities, lost & dangerous pets</p>
+                        <p class="text-muted">Check </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 portfolio-item">
